crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__binop_with_case.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\na + case x of\n    1 -> y\n    _ -> z\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 3,
            column: 11,
        },
    },
    value: BinOps {
        operands: [
            BinOpOperand {
                expr: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 2,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "a",
                    },
                },
                op: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "+",
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 4,
                    column: 1,
                },
            },
            value: Case {
                scrutinee: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "x",
                    },
                },
                arms: [
                    CaseArm {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 5,
                                },
                                end: Position {
                                    line: 2,
                                    column: 6,
                                },
                            },
                            value: Int(
                                1,
                            ),
                        },
                        body: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 10,
                                },
                                end: Position {
                                    line: 2,
                                    column: 11,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "y",
                            },
                        },
                    },
                    CaseArm {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 5,
                                },
                                end: Position {
                                    line: 3,
                                    column: 6,
                                },
                            },
                            value: Anything,
                        },
                        body: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 10,
                                },
                                end: Position {
                                    line: 3,
                                    column: 11,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "z",
                            },
                        },
                    },
                ],
            },
        },
    },
}
