crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__binop_with_parens.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\n(a + b) * c"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: BinOps {
        operands: [
            BinOpOperand {
                expr: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: BinOps {
                        operands: [
                            BinOpOperand {
                                expr: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 2,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 3,
                                        },
                                    },
                                    value: Var {
                                        kind: LowVar,
                                        name: "a",
                                    },
                                },
                                op: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 5,
                                        },
                                    },
                                    value: "+",
                                },
                            },
                        ],
                        last: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    line: 1,
                                    column: 7,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "b",
                            },
                        },
                    },
                },
                op: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: "*",
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: Var {
                kind: LowVar,
                name: "c",
            },
        },
    },
}
